# AjTrak

./: CMakeLists.txt  CVTest.cpp  Common.py  ExecuteModel.py  EyeDetection.cpp  ImageCapture.cpp  ImageCapture.py  ObjectDetection.cpp  README.md  Timer.h  TrainModel.py  TrainNetwork.cpp  test.py  timer.cpp
